# flyer

./: .gitignore  Cargo.toml  README.md  TODO.md  VALIDATION.md  _main.rs  host.cert  host.key  stats.txt  test.rs  todo.md
assets/: main.css  style.css
examples/: assets.rs  basic.rs  cookie.rs  env.rs  form_validation.rs  forms.rs  middleware.rs  middleware_  routing.rs  session.rs  ssl.rs  subdomain.rs  tls.rs  view.rs  websocket.rs
examples/assets/: main.rs
examples/basic/: main.rs
examples/cookie/: main.rs
examples/forms/: main.rs
examples/middleware/: main.rs
examples/routing/: main.rs
examples/session/: main.rs
examples/view/: main.rs
examples/websocket/: main.rs
src/: __main.rs  assets.rs  http.rs  lib.rs  main copy.rs  main.rs  main.rs_pointer  main_.rs  request.rs  response.rs  router.rs  session.rs  view.rs  ws.rs  ws_.rs_
src/assets/: cache.rs  mod.rs
src/cookie/: mod.rs
src/cookies/: mod.rs
src/flyer/: mod.rs  request.rs  response.rs  router.rs
src/flyer/handler/: http1x.rs
src/handler/: http1.rs  http1x.rs  http2.rs  http2x.rs  http3.rs  mod.rs
src/http/: mod.rs  response.rs  router.rs
src/http/handler/: http1x.rs  mod.rs
src/request/: form.rs  mod.rs  parse.rs  parser.rs
src/response/: mod.rs  parser.rs
src/router/: group.rs  group_  middleware.rs  mod.rs  mod.rs_  next.rs  resolver.rs  route.rs  routes.rs
src/server/: mod.rs  tcp.rs  udp.rs
src/server/handler/: http1.rs  http1_ws.rs  http2.rs  http3.rs  mod.rs  ws.rs  ws_http1.rs  ws_http1.rs_
src/server/helpers/: mod.rs  parse.rs
src/server/protocol/: http.rs  mod.rs
src/server/transport/: mod.rs  tcp.rs  udp.rs
src/server/transport/handler/: http1.rs  http1_ws.rs  http2.rs  http3.rs  mod.rs  ws.rs
src/session/: cookie.rs  mod.rs
src/session/cookie/: mod.rs  utils.rs
src/session/file/: mod.rs  utils.rs
src/utils/: async_peek.rs  cookie.rs  encrypt.rs  logger.rs  mod.rs  server.rs  string.rs  url.rs
src/utils/development/: dns.rs
src/validation/: mod.rs  rules.rs
src/view/: functions.rs  mod.rs  session_functions.rs
src/view/functions/: mod.rs  session.rs  utils.rs
src/ws/: mod.rs
src/zero/: mod.rs  response.rs  router.rs
src/zero/handler/: http1x.rs  http2x.rs  http3x.rs
views/: 404.html  index.html
views/nested/: services.html
