[package]
name = "flyer"
version = "0.0.0"
authors = ["Themba Lucas Ngubeni <thembangubeni04@email.com>"]
license = "MIT"
description = "HTTP framework for rust"
readme = "README.md"
homepage = "https://github.com/lucas11776-golang/flyer"
repository = "https://github.com/lucas11776-golang/flyer"
keywords = ["http", "web", "framework"]
categories = ["web-programming", "web-programming::http-server", "web-programming::websocket"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-std = "1.13.2"
