[package]
name = "flyer"
version = "2.1.4"
authors = ["Themba Lucas Ngubeni <thembangubeni04@email.com>"]
license = "MIT"
description = "HTTP framework for rust"
readme = "README.md"
homepage = "https://github.com/lucas11776-golang/flyer"
repository = "https://github.com/lucas11776-golang/flyer"
keywords = ["http", "web", "framework"]
categories = ["web-programming", "web-programming::http-server", "web-programming::websocket"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-std = "1.13.2"
once_cell = "1.21.4"
tokio = { version = "1.50.0", features = ["full"] }
rustls = "0.23.37"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
tokio-rustls = "0.26.4"
quinn = "0.11.9"   
h3 = "0.0.8"   
h3-quinn = "0.0.10"     
slog-async = "2.8.0"
slog-term = "2.9.2"
slog = "2.8.2"
base64 = "0.22.1"
futures = "0.3.32"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
dotenv = "0.15.0"
openssl = "0.10.78"
bytes = "1.11.1"
tokio-tungstenite = "0.29.0"
tungstenite = "0.29.0"
urlencoding = "2.1.3"
h2 = "0.4.13"
http = "1.4.0"
url-domain-parse = "0.1.4"
uuid = { version = "1.23.1", features = ["v4"] }
cookie = "0.18.1"
tera = "1.20.1"
aes-gcm = "0.10.3"
multer = "3.1.0"
tokio-util = "0.7.18"
regex = "1.12.3"
lazy_static = "1.5.0"
mime_guess = "2.0.5"
hickory-proto = "0.25.2"
httparse = "1.10.1"
http-body-util = "0.1.3"
futures-util = "0.3.32"
chrono = "0.4.44"
ulid = "1.2.1"
ipnetwork = "0.21.1"
